--- a/design-project.html
+++ b/design-project.html
@@ -131,8 +131,14 @@
     <!--        STARTS SELECTED WORK AND IMAGES ROW-->
 
     <div class="row rowThree rowThreeXS rowThreeSM">
-        <div class="col-12">
+        <div class="col-12 d-sm-block d-md-none">
             <p class="text-center imageText">SELECTED WORK</p>
+        </div>
+        <div class="col-8 d-none d-md-block">
+            <p class="d-flex imageText">SELECTED WORK</p>
+        </div>
+        <div class="col-4 d-none d-md-block">
+            <p class="d-flex imageText">THE LAST</p>
         </div>
         <!--            APPLE IPAD XS-->
         <div class="col-12 col-sm-6 text-center d-block d-sm-none">
@@ -243,8 +249,42 @@
             </div>
         </div>
 
+        <!--        IMAGE GROUP BOX 1 APPLE IPAD/MACBOOK/3 IMAGE MEDIUM-->
+        <div class="col-sm-6 col-md-4 text-center d-none d-md-block">
+            <img src="./assets/images/apple-ipad.jpg" alt="apple" class="appleIpadSM">
+        </div>
+        <div class="col-sm-6 col-md-4 text-center d-none d-md-block">
+            <img src="./assets/images/macbook.jpg" alt="apple" class="macbookSM">
+        </div>
+        <div class="col-md-4 d-none d-md-block">
+            <span class="d-flex flex-column">
+                <span class="d-flex">
+                    <img src="./assets/images/mobile-phone.jpg" alt="phone" class="mobileMD">
+                    <h6 class="tinyText anton">THE ADMIN BAR AND ABSOLUTE POSITIONING</h6>
 
+                </span>
+                 <span class="d-flex">
+                   <img src="./assets/images/head.jpg" alt="head" class="headMD">
+                    <h6 class="tinyText anton">NIBBLER AWESOME WEBSITE TESTING</h6>
+
+                </span>
+                 <span class="d-flex">
+                    <img src="./assets/images/google-search.jpg" alt="search" class="googleMD">
+                    <h6 class="tinyText anton">HOW TO GET GOOGLE TO LIKE YOU</h6>
+
+                </span>
+
+
+
+            </span>
+        </div>
     </div>
+
+
+    </span>
+</div>
+
+</div>
 </div>
 
 
