Saving end of day; almost finished with Medium

--- a/design-project.html
+++ b/design-project.html
@@ -251,33 +251,66 @@
 
         <!--        IMAGE GROUP BOX 1 APPLE IPAD/MACBOOK/3 IMAGE MEDIUM-->
         <div class="col-sm-6 col-md-4 text-center d-none d-md-block">
-            <img src="./assets/images/apple-ipad.jpg" alt="apple" class="appleIpadSM">
+            <img src="./assets/images/apple-ipad.jpg" alt="apple" id="appleIpadMD">
         </div>
         <div class="col-sm-6 col-md-4 text-center d-none d-md-block">
-            <img src="./assets/images/macbook.jpg" alt="apple" class="macbookSM">
+            <img src="./assets/images/macbook.jpg" alt="apple" id="macbookMD">
         </div>
-        <div class="col-md-4 d-none d-md-block">
-            <span class="d-flex flex-column">
-                <span class="d-flex">
+        <div class="col-md-4 d-none d-md-block" id="tinyImageMediumBox">
+            <span class="d-flex flex-column justify-content-between" id="tinyImageMediumSpan">
+                <span class="d-flex" id="mobileMedium">
                     <img src="./assets/images/mobile-phone.jpg" alt="phone" class="mobileMD">
                     <h6 class="tinyText anton">THE ADMIN BAR AND ABSOLUTE POSITIONING</h6>
 
                 </span>
-                 <span class="d-flex">
+                 <span class="d-flex" id="nibblerMedium">
                    <img src="./assets/images/head.jpg" alt="head" class="headMD">
                     <h6 class="tinyText anton">NIBBLER AWESOME WEBSITE TESTING</h6>
 
                 </span>
-                 <span class="d-flex">
-                    <img src="./assets/images/google-search.jpg" alt="search" class="googleMD">
-                    <h6 class="tinyText anton">HOW TO GET GOOGLE TO LIKE YOU</h6>
-
-                </span>
-
-
-
+<!--               <span class="d-flex">-->
+<!--                    <img src="./assets/images/google-search.jpg" alt="search" class="googleMD">-->
+<!--                    <h6 class="tinyText anton">HOW TO GET GOOGLE TO LIKE YOU</h6>-->
+<!--                </span>-->
             </span>
         </div>
+
+        <!-- IMAGE GROUP FEATURE BOX 1 MEDIUM -->
+
+        <div class="col-2 d-none d-md-block" id="featuredMD1">
+            <p id="imageTextMD1">FEATURED PROJECT</p>
+        </div>
+        <div class="col-2 d-none d-md-block" id="Col2Medium1">
+            <div class="d-flex justify-content-end" id="smallCircleMediumDiv1">
+                   <span class="d-none d-md-block">
+                       <span class="d-flex justify-content-end" id="smallCircleSMedium1">
+                           <h6 class="rounded-circle anton d-flex justify-content-center align-items-center circleRed smallCircleSmallPad">D</h6>
+                           <h6 class="rounded-circle anton d-flex justify-content-center align-items-center circleOrange smallCircleSmallPad">D</h6>
+                           <h6 class="rounded-circle anton d-flex justify-content-center align-items-center circleGreen smallCircleSmallPad">S</h6>
+                           <h6 class="rounded-circle anton d-flex justify-content-center align-items-center circleBlue smallCircleSmallPad">H</h6>
+                       </span>
+                   </span>
+            </div>
+        </div>
+
+        <!-- IMAGE GROUP FEATURE BOX 2 MEDIUM -->
+
+        <div class="col-2 d-none d-md-block" id="featuredMD2">
+            <p id="imageTextMD2">FEATURED PROJECT</p>
+        </div>
+        <div class="col-2 d-none d-md-block" id="Col2Medium2">
+            <div class="d-flex justify-content-end" id="smallCircleMediumDiv2">
+                   <span class="d-none d-md-block">
+                       <span class="d-flex justify-content-end" id="smallCirclesMedium2">
+                           <h6 class="rounded-circle anton d-flex justify-content-center align-items-center circleRed smallCircleSmallPad">D</h6>
+                           <h6 class="rounded-circle anton d-flex justify-content-center align-items-center circleOrange smallCircleSmallPad">D</h6>
+                           <h6 class="rounded-circle anton d-flex justify-content-center align-items-center circleGreen smallCircleSmallPad">S</h6>
+                           <h6 class="rounded-circle anton d-flex justify-content-center align-items-center circleBlue smallCircleSmallPad">H</h6>
+                       </span>
+                   </span>
+            </div>
+        </div>
+
     </div>
 
 
