Saving completed medium + Driver switch

--- a/design-project.html
+++ b/design-project.html
@@ -5,10 +5,11 @@
     <meta lang="en"/>
     <meta http-equiv="x-ua-compatible" content="ie=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <title><!-- TODO: put your title here --></title>
+    <title>Codeup Design Project</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
           integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <!-- Your custom styles go here -->
+    <script src="https://kit.fontawesome.com/708340466d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="design-project.css">
     <link href="https://fonts.googleapis.com/css?family=Anton&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Abel&display=swap" rel="stylesheet">
@@ -250,10 +251,10 @@
         </div>
 
         <!--        IMAGE GROUP BOX 1 APPLE IPAD/MACBOOK/3 IMAGE MEDIUM-->
-        <div class="col-sm-6 col-md-4 text-center d-none d-md-block">
+        <div class="col-md-4 text-center d-none d-md-block">
             <img src="./assets/images/apple-ipad.jpg" alt="apple" id="appleIpadMD">
         </div>
-        <div class="col-sm-6 col-md-4 text-center d-none d-md-block">
+        <div class="col-md-4 text-center d-none d-md-block">
             <img src="./assets/images/macbook.jpg" alt="apple" id="macbookMD">
         </div>
         <div class="col-md-4 d-none d-md-block" id="tinyImageMediumBox">
@@ -268,10 +269,6 @@
                     <h6 class="tinyText anton">NIBBLER AWESOME WEBSITE TESTING</h6>
 
                 </span>
-<!--               <span class="d-flex">-->
-<!--                    <img src="./assets/images/google-search.jpg" alt="search" class="googleMD">-->
-<!--                    <h6 class="tinyText anton">HOW TO GET GOOGLE TO LIKE YOU</h6>-->
-<!--                </span>-->
             </span>
         </div>
 
@@ -306,6 +303,71 @@
                            <h6 class="rounded-circle anton d-flex justify-content-center align-items-center circleOrange smallCircleSmallPad">D</h6>
                            <h6 class="rounded-circle anton d-flex justify-content-center align-items-center circleGreen smallCircleSmallPad">S</h6>
                            <h6 class="rounded-circle anton d-flex justify-content-center align-items-center circleBlue smallCircleSmallPad">H</h6>
+                       </span>
+                   </span>
+            </div>
+        </div>
+
+        <!-- Google search side image PLEASE WORK -->
+            <div class="col-md-4 d-none d-md-block">
+                <span class="d-flex">
+                    <img src="./assets/images/google-search.jpg" alt="search" class="googleMD">
+                    <h6 class="tinyText anton">HOW TO GET GOOGLE TO LIKE YOU</h6>
+                </span>
+            </div>
+
+        <!-- IMAGE GROUP BOX 2 MAN / SECURITY MEDIUM -->
+
+        <div class="col-md-4 text-center d-none d-md-block">
+            <img src="./assets/images/man.jpg" alt="man" id="manMD">
+        </div>
+        <div class="col-md-4 text-center d-none d-md-block">
+            <img src="./assets/images/security.jpg" alt="security" id="securityMD">
+        </div>
+
+        <!-- LAST TWEET + PARAGRAPH -->
+
+        <div class="col-md-4 d-none d-md-block" id="tweetBox">
+            <span class="d-flex">
+                <i id="twitterLogo" class="fab fa-twitter"></i>
+                <p id="lastTweetText"><strong>LAST TWEET</strong></p>
+            </span>
+            <span class="d-flex"
+                  <p id="tweetParagraph">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euis-mod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci</p>
+        </div>
+
+
+        <!-- IMAGE GROUP FEATURE BOX 3 -->
+
+        <div class="col-2 d-none d-md-block" id="featuredMD3">
+            <p id="imageTextMD3">FEATURED PROJECT</p>
+        </div>
+        <div class="col-2 d-none d-md-block">
+            <div class="d-flex justify-content-end" id="smallCircleMediumDiv3">
+                   <span class="d-none d-md-block">
+                       <span class="d-flex justify-content-end" id="smallCirclesMedium3">
+                           <h6 class="rounded-circle anton d-flex justify-content-center align-items-center circleRed smallCircleMediumPad">D</h6>
+                           <h6 class="rounded-circle anton d-flex justify-content-center align-items-center circleOrange smallCircleMediumPad">D</h6>
+                           <h6 class="rounded-circle anton d-flex justify-content-center align-items-center circleGreen smallCircleMediumPad">S</h6>
+                           <h6 class="rounded-circle anton d-flex justify-content-center align-items-center circleBlue smallCircleMediumPad">H</h6>
+                       </span>
+                   </span>
+            </div>
+        </div>
+
+        <!-- IMAGE GROUP FEATURE BOX 4 -->
+
+        <div class="col-2 d-none d-md-block" id="featuredMD4">
+            <p id="imageTextMD4">FEATURED PROJECT</p>
+        </div>
+        <div class="col-2 d-none d-md-block">
+            <div class="d-flex justify-content-end" id="smallCircleMediumDiv4">
+                   <span class="d-none d-md-block">
+                       <span class="d-flex justify-content-end" id="smallCirclesMedium4">
+                           <h6 class="rounded-circle anton d-flex justify-content-center align-items-center circleRed smallCircleMediumPad">D</h6>
+                           <h6 class="rounded-circle anton d-flex justify-content-center align-items-center circleOrange smallCircleMediumPad">D</h6>
+                           <h6 class="rounded-circle anton d-flex justify-content-center align-items-center circleGreen smallCircleMediumPad">S</h6>
+                           <h6 class="rounded-circle anton d-flex justify-content-center align-items-center circleBlue smallCircleMediumPad">H</h6>
                        </span>
                    </span>
             </div>
