--- a/design-project.html
+++ b/design-project.html
@@ -332,8 +332,9 @@
                 <i id="twitterLogo" class="fab fa-twitter"></i>
                 <p id="lastTweetText"><strong>LAST TWEET</strong></p>
             </span>
-            <span class="d-flex"
+            <span class="d-flex">
                   <p id="tweetParagraph">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euis-mod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci</p>
+            </span>
         </div>
 
 
